--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,15 @@
   box-sizing: border-box;
 }
 
+.footer{
+  background-color: rgb(0, 0, 0);
+  bottom: 0;
+  padding-top: 2em;
+  position: absolute;
+  width: 100%;
+  color: rgb(255, 255, 255);
+}
+
+ul li a {
+  text-decoration: none;
+}
