--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+  overflow: hidden;
+}
+
 .footer{
   background-color: rgb(0, 0, 0);
   bottom: 0;
@@ -15,4 +19,21 @@
 
 ul li a {
   text-decoration: none;
+}
+
+.sidebar{
+  min-height: 100vh;
+  color: white;
+  height: 100vh;
+  width: 200px;
+}
+
+.logo{
+  padding: .875rem 1.25rem;
+}
+
+.menu{
+  width: 18rem;
+  display: flex;
+  flex-direction: column;
 }
