--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,24 @@
   box-sizing: border-box;
 }
 
+:root{
+  --color1: RGB(81, 139, 144);
+  --color2: RGB(65, 179, 95);
+}
+
 body{
   overflow: hidden;
 }
 
-.footer{
-  background-color: rgb(0, 0, 0);
-  bottom: 0;
-  padding-top: 2em;
-  position: absolute;
-  width: 100%;
-  color: rgb(255, 255, 255);
+.navBar{
+  background: var(--color1)
 }
 
-ul li a {
-  text-decoration: none;
+.btn-home{
+  background:rgb(92, 90, 90);
+  border: none;
+  font-size: 30px;
+  width: 400px;
 }
 
 .sidebar{
@@ -34,6 +37,32 @@ ul li a {
 
 .menu{
   width: 18rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-container{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.wrap{
+  flex: 1;
+}
+
+.footer{
+  background: var(--color1);
+  bottom: 0;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  height: 100%;
+  padding-top: 2em;
+  position: relative;
+  width: 100%;
+}
+
+.colFooter{
   display: flex;
   flex-direction: column;
 }
