--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 .sidebar {
-  min-height: 100vh;
+  background-color: RGB(81, 139, 144);
   color: white;
-  width: 200px;
+  height: 100vh;
+  width: 230px;
 }
 
 .logo {
@@ -104,6 +105,14 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   justify-content: center;
 }
+
+.colHomebanking {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 25px;
+}
+
 
 /*Componente lista de actividad -Marcos */
 
@@ -275,4 +284,8 @@ p {
 
 .btns button:active {
   transform: scale(0.97);
+}
+
+.navBarHomebanking{
+  background-color: RGB(81, 139, 144);
 }
