--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,9 @@ body::-webkit-scrollbar-thumb {
 }
 .footer {
   background: var(--color1);
-  margin-top: auto;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .colFooter {
@@ -112,7 +114,6 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   margin-top: 25px;
 }
-
 
 /*Componente lista de actividad -Marcos */
 
@@ -286,14 +287,14 @@ p {
   transform: scale(0.97);
 }
 
-.navBarHomebanking{
+.navBarHomebanking {
   background-color: RGB(81, 139, 144);
 }
 
-.avatarPerfil{
+.avatarPerfil {
   max-width: 50px;
 }
 
-.salir{
-  margin-top: 495px;
+.salir {
+  margin-top: 300px;
 }
