--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,11 @@ body {
 
 body::-webkit-scrollbar {
   width: 8px;
-  background: var(--color2);
+  background: var(--color1);
 }
 
 body::-webkit-scrollbar-thumb {
-  background: RGB(81, 139, 144);
+  background: RGB(65, 179, 95);
   border-radius: 10px;
 }
 
@@ -94,11 +94,12 @@ body::-webkit-scrollbar-thumb {
   color: var(--color2);
   text-decoration: none;
 }
+
+/*SACAR EL FOOTER DEL LOGIN*/
 .footer {
   background: var(--color1);
   width: 100%;
-  position: absolute;
-  bottom: 0;
+
 }
 
 .colFooter {
@@ -297,4 +298,174 @@ p {
 
 .salir {
   margin-top: 300px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-login h4 {
+  text-align: center;
+  color: aliceblue;
+}
+
+.form-login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  width: 400px;
+  text-align: center;
+  padding: 30px 50px;
+  box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.3);
+  background-color: rgb(70, 70, 70);
+}
+
+.form-login input {
+  padding: 10px;
+  margin: 15px;
+  background-color: transparent;
+  color: aliceblue;
+  border: none;
+  border-bottom: 1px solid var(--color2);
+  transition: all 0.2s ease-in;
+  font-size: 18px;
+}
+
+.form-login input:focus {
+  outline: none;
+}
+
+.form-login input:focus-within {
+  background-color: transparent;
+}
+
+.form-login input:hover {
+  -webkit-box-shadow: 0px 10px 10px -4px rgba(65, 179, 95, 0.39);
+  box-shadow: 0px 10px 10px -4px rgba(65, 179, 95, 0.39);
+}
+
+.form-login button {
+  margin-left: 60px;
+  margin-top: 20px;
+}
+
+.form-login span {
+  color: var(--color2);
+  margin: 15px;
+  text-decoration: none;
+}
+
+
+.form-registro h4 {
+  text-align: center;
+  color: aliceblue;
+}
+
+.form-registro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  width: 700px;
+  text-align: center;
+  padding: 30px 50px;
+  box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.3);
+  background-color: rgb(70, 70, 70);
+}
+
+.form-registro input {
+  padding: 10px;
+  margin: 15px;
+  background-color: transparent;
+  color: aliceblue;
+  border: none;
+  border-bottom: 1px solid var(--color2);
+  transition: all 0.2s ease-in;
+  font-size: 18px;
+}
+
+.form-registro input:focus {
+  outline: none;
+}
+
+.form-registro input:focus-within {
+  background-color: transparent;
+}
+
+.form-registro input:hover {
+  -webkit-box-shadow: 0px 10px 10px -4px rgba(65, 179, 95, 0.39);
+  box-shadow: 0px 10px 10px -4px rgba(65, 179, 95, 0.39);
+}
+
+.form-registro button {
+  margin-left: 205px;
+  margin-top: 20px;
+}
+
+.form-registro span {
+  color: var(--color2);
+  margin: 15px;
+  text-decoration: none;
+}
+
+
+.registro-grid{
+  display:grid;
+  grid-template-columns: repeat(2, 1fr) ;
+}
+
+.cssbuttons-io-button {
+  background: var(--color2);
+  color: white;
+  font-family: inherit;
+  padding: 0.35em;
+  padding-left: 1.2em;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0 0 1.6em -0.6em var(--color1);
+  overflow: hidden;
+  position: relative;
+  height: 2.8em;
+  padding-right: 3.3em;
+}
+
+.cssbuttons-io-button .icon {
+  background: white;
+  margin-left: 1em;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.2em;
+  width: 2.2em;
+  border-radius: 0.7em;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em var(--color1);
+  right: 0.3em;
+  transition: all 0.3s;
+}
+
+.cssbuttons-io-button:hover .icon {
+  width: calc(100% - 0.6em);
+}
+
+.cssbuttons-io-button .icon svg {
+  width: 1.1em;
+  transition: transform 0.3s;
+  color: var(--color1);
+}
+
+.cssbuttons-io-button:hover .icon svg {
+  transform: translateX(0.1em);
+}
+
+.cssbuttons-io-button:active .icon {
+  transform: scale(0.95);
 }
