--- a/src/Components/Botones/BotonContacto.css
+++ b/src/Components/Botones/BotonContacto.css
@@ -1,38 +1,50 @@
+.container-boton-contacto {
+  margin-left: 15px;
+  margin-top: 1.875rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .buttonContacto {
   padding: 0.9em 2em;
-  border: 2px solid #17C3B2;
+  border: 2px solid RGB(65, 179, 95);
   position: relative;
   overflow: hidden;
   background-color: transparent;
   text-align: center;
   text-transform: uppercase;
-  font-size: 16px;
-  color: #ddd;
-  transition: .3s;
+  font-size: 20px;
+
+  transition: 0.3s;
   z-index: 1;
   font-family: inherit;
-  color: #17C3B2;
- }
- 
- .buttonContacto::before {
-  content: '';
+  color: aliceblue;
+}
+
+.buttonContacto::before {
+  content: "";
   width: 0;
   height: 300%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
-  background: #17C3B2;
-  transition: .5s ease;
+  background: RGB(65, 179, 95);
+  transition: 0.5s ease;
   display: block;
   z-index: -1;
- }
- 
- .buttonContacto:hover::before {
+}
+
+.buttonContacto:hover {
+  box-shadow: 0px 5px 10px 5px rgba(65, 179, 95, 0.281);
+}
+
+.buttonContacto:hover::before {
   width: 105%;
- }
- 
- .buttonContacto:hover {
-  color: #111;
- }
- 
+}
+
+.buttonContacto:hover {
+  color: aliceblue;
+}
