--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -16,6 +18,7 @@
 /*Marcos overflow x hidden*/
 body {
   display: flex;
+  font-family: 'Marcellus', serif;
   flex-direction: column;
   min-height: 100%;
   overflow-x: hidden;
