--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: RGB(65, 179, 95);
+  background-color: rgba(81, 139, 144,0.9);
   border-radius: 10px;
 }
 
@@ -53,7 +53,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .sidebar {
-  background-color: RGB(81, 139, 144);
+  background-color: rgba(81, 139, 144,0.9);
   color: white;
   height: 100vh;
   width: 14rem;
@@ -139,7 +139,7 @@ main{
 /*Componente lista de actividad -Marcos */
 
 .container-actividad {
-  border: 1px solid rgba(144, 144, 144, 0.678);
+  border: 1px solid rgba(81, 139, 144,0.9);
   height: 37.5rem;
   width: 31.25rem;
   border-radius: 0.3125rem;
@@ -147,11 +147,19 @@ main{
   overflow-y: auto;
 }
 
+.container-actividad::-webkit-scrollbar {
+  display:none;
+}
+
+.container-actividad::-webkit-scrollbar-thumb {
+  display:none;
+}
+
 .title {
   color: #000;
   font-size: 0.9375rem;
   padding: 0.9375rem;
-  border-bottom: 1px solid rgba(144, 144, 144, 0.678);
+  /* border-bottom: 1px solid rgba(144, 144, 144, 0.678); */
   margin: 0;
 }
 
