--- a/src/index.css
+++ b/src/index.css
@@ -336,6 +336,13 @@ p {
   margin-top: 25px;
 }
 
+.container2 {
+  height: 80%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .form-login h4 {
   text-align: center;
   color: aliceblue;
