--- a/src/index.css
+++ b/src/index.css
@@ -25,14 +25,15 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 8px;
-  background: var(--color1);
+  display: none;
+  /* width: 8px;
+  background: var(--color1); */
 }
 
-body::-webkit-scrollbar-thumb {
+/* body::-webkit-scrollbar-thumb {
   background-color: rgba(81, 139, 144,0.9);
   border-radius: 10px;
-}
+} */
 
 .navBar {
   background: var(--color1);
