--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Marcellus&display=swap");
 
 * {
   margin: 0;
@@ -18,7 +18,7 @@
 /*Marcos overflow x hidden*/
 body {
   display: flex;
-  font-family: 'Marcellus', serif;
+  font-family: "Marcellus", serif;
   flex-direction: column;
   min-height: 100%;
   overflow-x: hidden;
@@ -54,7 +54,7 @@ body::-webkit-scrollbar {
 }
 
 .sidebar {
-  background-color: rgba(81, 139, 144,0.9);
+  background-color: rgba(81, 139, 144, 0.9);
   color: white;
   height: 100vh;
   width: 14rem;
@@ -107,17 +107,17 @@ body::-webkit-scrollbar {
   margin: 0 auto;
 }
 
-.page-container{
+.page-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
-.wrap{
+.wrap {
   flex: 1;
 }
 
-main{
+main {
   max-width: 1000px;
   margin: 50px auto;
   overflow: hidden;
@@ -140,7 +140,7 @@ main{
 /*Componente lista de actividad -Marcos */
 
 .container-actividad {
-  border: 1px solid rgba(81, 139, 144,0.9);
+  border: 1px solid rgba(81, 139, 144, 0.9);
   height: 37.5rem;
   width: 31.25rem;
   border-radius: 0.3125rem;
@@ -149,11 +149,11 @@ main{
 }
 
 .container-actividad::-webkit-scrollbar {
-  display:none;
+  display: none;
 }
 
 .container-actividad::-webkit-scrollbar-thumb {
-  display:none;
+  display: none;
 }
 
 .title {
@@ -262,7 +262,7 @@ p {
 /*Componente saldo - Marcos*/
 
 .container-saldo {
-  border: 1px solid rgba(81, 139, 144,0.9);
+  border: 1px solid rgba(81, 139, 144, 0.9);
   width: 350px;
   height: 200px;
   display: flex;
@@ -318,7 +318,7 @@ p {
 }
 
 .navBarHomebanking {
-  background-color: rgba(81, 139, 144,0.9);
+  background-color: rgba(81, 139, 144, 0.9);
 }
 
 .avatarPerfil {
@@ -339,7 +339,7 @@ p {
 
 .container2 {
   height: 80%;
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -510,7 +510,7 @@ p {
   flex-direction: column;
   padding: 3rem;
   margin: 0.9375rem;
-  color:aliceblue;
+  color: aliceblue;
 }
 
 .contact-form input {
@@ -527,16 +527,16 @@ p {
 
 .contact-form form input:focus {
   outline: none;
-  color:aliceblue;
+  color: aliceblue;
 }
 
-.contact-form form input{
-  color:aliceblue;
+.contact-form form input {
+  color: aliceblue;
 }
 
 .contact-form form input:focus-within {
   background-color: transparent;
-  color:aliceblue;
+  color: aliceblue;
 }
 
 .contact-form input:hover {
@@ -544,21 +544,19 @@ p {
   box-shadow: 0px 10px 10px -4px rgba(65, 179, 95, 0.39);
 }
 
-.textarea{
-  margin-left:30px;
+.textarea {
+  margin-left: 30px;
   display: flex;
-  justify-content:center;
-  margin-top:20px;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.textarea textarea{
-  padding:0.3125rem;
-  background-color:rgba(105, 105, 105, 0.596);
-  color:aliceblue; 
-  border: 2px solid var(--color2)
+.textarea textarea {
+  padding: 0.3125rem;
+  background-color: rgba(105, 105, 105, 0.596);
+  color: aliceblue;
+  border: 2px solid var(--color2);
 }
-
-
 
 .cssbuttons-io-button {
   background: var(--color2);
@@ -613,36 +611,40 @@ p {
   transform: scale(0.95);
 }
 
-.homebankingfondo{
- background: var(--color1);
- height: 100vh;
- width:100vw;
- display: flex;
- justify-content: center;
+.homebankingfondo {
+  background: var(--color1);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.content{
+.content {
   width: 100%;
 }
 
-.error404{
+.error404 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: RGBA(81, 139, 144,0.8);
+  background-color: RGBA(81, 139, 144, 0.8);
   height: 100vh;
   width: 100%;
 }
 
-.colPerfil{
+.colPerfil {
   display: flex;
   flex-direction: column;
 }
 
-.error{
-color:rgb(226, 58, 58);
+.error {
+  color: rgb(226, 58, 58);
+}
+
+.exito {
+  color: aquamarine;
 }
