--- a/src/index.css
+++ b/src/index.css
@@ -346,7 +346,8 @@ p {
 
 .form-login h4 {
   text-align: center;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
 }
 
 .form-login {
@@ -357,16 +358,16 @@ p {
   width: 400px;
   text-align: center;
   padding: 30px 50px;
-  box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, 0.3);
-  background-color: rgb(70, 70, 70);
+  box-shadow: 0px 3px 5px 1px rgba(87, 87, 87, 0.3);
+  background-color: rgb(241, 241, 241);
 }
 
 .form-login input {
   padding: 10px;
   margin: 15px;
-  background-color: transparent;
-  color: aliceblue;
-  border: none;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border: 1px solid rgba(148, 148, 148, 0.397);
   border-bottom: 1px solid var(--color2);
   transition: all 0.2s ease-in;
   font-size: 18px;
@@ -374,6 +375,7 @@ p {
 
 .form-login input:focus {
   outline: none;
+  background-color: rgb(255, 255, 255);
 }
 
 .form-login input:focus-within {
@@ -386,8 +388,13 @@ p {
 }
 
 .form-login button {
-  margin-left: 60px;
+  color: #000;
+  margin-right: 30px;
   margin-top: 20px;
+}
+
+.form-login button:active {
+  transform: scale(0.96);
 }
 
 .form-login span {
@@ -396,7 +403,7 @@ p {
   text-decoration: none;
 }
 
-.registro-container {
+/*.registro-container {
   height: 100vh;
 }
 
@@ -455,7 +462,7 @@ p {
 .registro-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
+}*/
 
 .contact-container {
   display: flex;
