--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Marcellus&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap");
 
 * {
   margin: 0;
@@ -140,11 +141,10 @@ main {
 /*Componente lista de actividad -Marcos */
 
 .container-actividad {
-  border: 1px solid rgba(81, 139, 144, 0.9);
-  height: 37.5rem;
-  width: 31.25rem;
-  border-radius: 0.3125rem;
-  box-shadow: 0px 0.3125rem 0.9375rem 0.125rem rgba(144, 144, 144, 0.144);
+  height: 25rem;
+  width: 37.5rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0.3125rem 0.9375rem 0.125rem rgba(144, 144, 144, 0.4);
   overflow-y: auto;
 }
 
@@ -158,10 +158,11 @@ main {
 
 .title {
   color: #000;
-  font-size: 0.9375rem;
+  font-size: 1.2rem;
   padding: 0.9375rem;
   /* border-bottom: 1px solid rgba(144, 144, 144, 0.678); */
   margin: 0;
+  font-weight: bold;
 }
 
 /*Componente item en la lista de actividades -Marcos*/
@@ -173,8 +174,9 @@ main {
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-
+  cursor: pointer;
   width: 100%;
+  padding: 0.6rem;
 }
 
 .description {
@@ -182,7 +184,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-
+  border-left: 5px solid rgb(69, 218, 118);
   height: 100%;
   padding: 0.3125rem;
   width: 80%;
@@ -262,59 +264,105 @@ p {
 /*Componente saldo - Marcos*/
 
 .container-saldo {
-  border: 1px solid rgba(81, 139, 144, 0.9);
-  width: 350px;
-  height: 200px;
+  border: none;
+  width: 600px;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 1.3rem;
+  box-shadow: 0px 8px 17px 2px rgba(0, 0, 0, 0.14),
+    0px 3px 14px 2px rgba(0, 0, 0, 0.12), 0px 5px 5px -3px rgba(0, 0, 0, 0.2);
+}
+
+.saldo-col1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 5px;
-  box-shadow: 0px 2px 5px rgb(0, 0, 0, 0.5);
-}
-
-.saldo {
-  border-bottom: 1px solid rgba(105, 105, 105, 0.328);
-  width: 100%;
-  margin-bottom: 40px;
-}
-
-.saldo h1 {
-  font-size: 15px;
-  color: black;
-  padding: 10px;
-}
-
-.saldo p {
-  font-size: 20px;
-  padding-left: 10px;
+  border-right: 1px solid rgba(97, 97, 97, 0.349);
+  padding-right: 60px;
 }
 
 .btns {
   display: flex;
   align-items: center;
   justify-content: space-around;
-
+  padding: 40px 0 0 0;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .btns button {
   padding: 8px;
   border: none;
-  border-radius: 4px;
-  background-color: var(--color1);
+  border-radius: 0;
+  background-color: rgb(19, 42, 80);
   color: #fff;
-  font-weight: bold;
+  border-radius: 0.625rem;
   transition: all 0.3s ease;
+  font-family: "Lato", sans-serif;
 }
 
 .btns button:hover {
-  background-color: var(--color2);
+  background-color: rgba(0, 104, 255, 1);
 }
 
 .btns button:active {
   transform: scale(0.97);
+}
+
+.saldo-col2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+
+  margin-left: 1rem;
+  padding-left: 3rem;
+}
+
+.saldo-actual {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 0.7rem 0 0.7rem 0.7rem;
+}
+
+.ingresos {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 0.7rem 0 0.7rem 0.7rem;
+}
+
+.egresos {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 0.7rem 0 0.7rem 0.7rem;
+}
+.saldo-actual h1 {
+  color: #196cb1;
+  font-family: "Lato", sans-serif;
+  font-size: 1.875rem;
+
+  margin: 0;
+}
+
+.ingresos h1 {
+  color: #4ab618;
+  font-family: "Lato", sans-serif;
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.egresos h1 {
+  color: #b3331c;
+  font-family: "Lato", sans-serif;
+  font-size: 1.5rem;
+  margin: 0;
 }
 
 .navBarHomebanking {
@@ -654,4 +702,66 @@ p {
 
 .exito {
   color: aquamarine;
+}
+
+.act-container {
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.card-container {
+  height: 9.5rem;
+  width: 16rem;
+  border-radius: 1.3rem;
+  background: rgb(14, 31, 59);
+  background: linear-gradient(
+    135deg,
+    rgba(14, 31, 59, 1) 0%,
+    rgba(9, 58, 121, 1) 28%,
+    rgba(0, 104, 255, 1) 100%
+  );
+  color: white;
+  box-shadow: 0px 10px 15px 2px rgba(0, 0, 0, 0.1),
+    0px 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.card-header-title {
+  font-family: "Rubik", sans-serif;
+  background-color: transparent;
+
+  border-radius: 1.3rem;
+  padding: 0.5rem 0 0.5rem 1rem;
+}
+
+.card-number {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  padding: 1.5rem 0 0 0;
+  font-size: 0.9rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.card-number span {
+  padding: 0 0 0 1.1rem;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.card-name {
+  font-size: 0.6rem;
+  margin: 15px;
+}
+
+.card-date {
+  font-size: 0.6rem;
+  margin: 15px;
 }
