--- a/src/index.css
+++ b/src/index.css
@@ -282,7 +282,7 @@ p {
   justify-content: center;
   align-items: center;
   border-right: 1px solid rgba(97, 97, 97, 0.349);
-  padding-right: 60px;
+  width: 100%;
 }
 
 .btns {
@@ -316,17 +316,14 @@ p {
 .saldo-col2 {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
-
-  margin-left: 1rem;
-  padding-left: 3rem;
+  width: 50%;
 }
 
 .saldo-actual {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   padding: 0.7rem 0 0.7rem 0.7rem;
 }
 
@@ -511,6 +508,37 @@ p {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }*/
+
+.boton{
+  border: none;
+  outline: none;
+  background: none;
+}
+
+
+form {
+  border-radius: 20px;
+  border: none;
+  background: rgb(255, 255, 255);
+  display: inline-block;
+  padding: 4px;
+}
+
+form > input {
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  margin-left: 15px;
+  font-size: 20px;
+}
+
+form > button {
+  background: rgb(255, 255, 255);
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 4px 10px;
+  border-radius: 20px;
+}
 
 .contact-container {
   display: flex;
