--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,9 @@
   --color3: rgb(70, 70, 70);
 }
 
-/* 518b90 */
-/* 41b35f */
-
 /*Marcos overflow x hidden*/
 body {
+  background-color: rgba(81, 139, 144,0.3);
   display: flex;
   font-family: "Marcellus", serif;
   flex-direction: column;
@@ -135,7 +133,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 25px;
 }
 
 /*Componente lista de actividad -Marcos */
@@ -250,7 +247,7 @@ main {
 
 h1 {
   color: rgb(236, 236, 236);
-  font-size: 50px;
+  font-size: 10px;
   padding: 0;
 }
 
@@ -265,8 +262,8 @@ p {
 
 .container-saldo {
   border: none;
-  width: 600px;
-  height: 300px;
+  width: 400px;
+  height: 250px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -282,6 +279,7 @@ p {
   justify-content: center;
   align-items: center;
   border-right: 1px solid rgba(97, 97, 97, 0.349);
+  height: 100%;
   width: 100%;
 }
 
@@ -289,9 +287,9 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 40px 0 0 0;
+  padding: 10px 0 0 0;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .btns button {
@@ -324,14 +322,13 @@ p {
 .saldo-actual {
   display: flex;
   flex-direction: column;
-  padding: 0.7rem 0 0.7rem 0.7rem;
+  padding: 0.4rem 0 0.4rem 0.4rem;
 }
 
 .ingresos {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 0.7rem 0 0.7rem 0.7rem;
 }
 
 .egresos {
@@ -343,7 +340,7 @@ p {
 .saldo-actual h1 {
   color: #196cb1;
   font-family: "Lato", sans-serif;
-  font-size: 1.875rem;
+  font-size: 1.5rem;
 
   margin: 0;
 }
@@ -741,8 +738,8 @@ form > button {
 }
 
 .card-container {
-  height: 9.5rem;
-  width: 16rem;
+  height: 7.5rem;
+  width: 14rem;
   border-radius: 1.3rem;
   background: rgb(14, 31, 59);
   background: linear-gradient(
@@ -759,9 +756,7 @@ form > button {
 .card-header-title {
   font-family: "Rubik", sans-serif;
   background-color: transparent;
-
   border-radius: 1.3rem;
-  padding: 0.5rem 0 0.5rem 1rem;
 }
 
 .card-number {
@@ -793,3 +788,4 @@ form > button {
   font-size: 0.6rem;
   margin: 15px;
 }
+
